added the google site verification in index.html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta name="twitter:image" content="https://images.unsplash.com/photo-1544421604-4bfaaeba6830?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w3Nzg4Nzd8MHwxfHNlYXJjaHwxfHxjb2ZmZWUlMjBiZWFucyUyMHBvdXJ8ZW58MXx8fHwxNzY5MDQ3ODQxfDA&ixlib=rb-4.1.0&q=80&w=1200">
     <link rel="canonical" href="https://saribeans.store/index.html">
     <meta name="robots" content="index, follow">
+    <meta name="google-site-verification" content="eZph-9Xhmw2B5ih8OWaoDw6QZ2WJHfQGR_eS4vQiq20" />
     <title>Sari-Sari - Filipino Coffee</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
