--- a/cart.html
+++ b/cart.html
@@ -23,6 +23,15 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="cart.css">
 </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RPKXR83PEM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RPKXR83PEM');
+</script>
 <body>
     
     <header class="header">
